Set fixed width for container of each tweet, align elements in tweet header

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,10 +1,11 @@
 section.tweets {
   margin-top: 2em;
+  width: 75%;
 }
 
 .tweets .tweet {
   border: 4px solid #545149;
-  padding: 1.3em;
+  padding: 1em;
   margin: 1em;
 }
 
@@ -12,5 +13,28 @@ section.tweets {
   border: none;
   height: 3px;
   background-color: #545149;
+}
+
+.tweet header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.5em;
+}
+
+.tweet .tweet-header-left {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+
+header .handle {
+  color: rgb(175, 175, 175);
+}
+
+.tweet p {
+  font-size: 0.8em;
+  font-weight: bold;
 }
 
